--- a/SeveraApiTypes/SeveraApiTypes.fsproj
+++ b/SeveraApiTypes/SeveraApiTypes.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Mutex.Visma.Severa.API.Types.ForUI</PackageId>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Authors>Jarmo Muukka, Mutex Oy</Authors>
     <Company>Mutex Oy</Company>
     <Product>Visma Severa</Product>
@@ -20,9 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SwaggerProvider" Version="0.10.0">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="SwaggerProvider" Version="0.10.0" />
   </ItemGroup>
 
   <ItemGroup>
